<resources>
    <string name="app_name">ETravelApp</string>
    <string name="welcome_text">Welcome to</string>
    <string name="app_name_display">ETravel</string>
    <string name="login_subtitle">Explore Destinations And Create Memories</string>
    <string name="login_title">Login</string>
    <string name="login_hint_email">Enter your email address</string>
    <string name="login_label_password">Password</string>
    <string name="login_hint_password">••••••••••</string>
    <string name="sign_in_text">Sign In</string>

    <string name="register_title">Create Account</string>
    <string name="register_subtitle">Begin Your Adventure With ETravel</string>
    <string name="email_label">Email</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up_label">Sign Up</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home_welcome">Welcome,</string>
    <string name="home_popular_destinations">Popular Destinations</string>
    <string name="home_explore_destinations">Explore Destinations</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_profile">Profile</string>
    <string name="book_your_flight_label">Book Your Flight</string>
    <string name="price">Price</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="flight_details">Flight Details</string>
    <string name="airline">Airline</string>
    <string name="departure_date">Departure Date</string>
    <string name="select_date">Select Date</string>
    <string name="return_date">Return Date</string>
    <string name="payment_information">Payment Information</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXX-XXXX-XXXX-XXXX</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date">Expiry</string>
    <string name="mm_yy">MM/YY</string>
    <string name="book_now">Book Now</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="sign_up"> Sign Up</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="_123">123</string>
    <string name="v">✓</string>
    <string name="booking_confirmed">Booking Confirmed!</string>
    <string name="your_flight_has_been_successfully_booked">Your flight has been successfully booked</string>
    <string name="destination">Destination</string>
    <string name="departure">Departure</string>
    <string name="total_price">Total Price</string>
    <string name="passenger_information">Passenger Information</string>
    <string name="back_to_home">Back to Home</string>

</resources>