<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7FA">



    <!-- ================= HEADER ================= -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_LAY_header"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_header_height"
        android:background="@drawable/bg_home_top"
        android:padding="@dimen/home_header_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_LBL_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_welcome"
            android:textSize="@dimen/home_welcome_text_size"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_LBL_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Traveler"
            android:textSize="@dimen/home_username_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/home_LBL_welcome"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Profile Icon in Circle -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_CARD_profile"
            android:layout_width="@dimen/home_profile_card_size"
            android:layout_height="@dimen/home_profile_card_size"
            app:cardCornerRadius="@dimen/home_profile_card_corner_radius"
            app:cardElevation="@dimen/home_profile_card_elevation"
            app:cardBackgroundColor="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/home_IMG_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/home_profile_icon_padding"
                android:src="@drawable/ic_user"
                android:contentDescription="Profile"
                app:tint="#2D5F8D"/>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ================= MAIN CONTENT ================= -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_SCROLL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/home_LAY_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/home_content_padding_bottom">

            <!-- Popular Destinations -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_popular_destinations"
                android:textSize="@dimen/home_section_title_text_size"
                android:textStyle="bold"
                android:textColor="#1E3A5F"
                android:layout_marginStart="@dimen/home_section_title_margin_start"
                android:layout_marginTop="@dimen/home_popular_title_margin_top" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_RV_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_popular_destination" />


            <!-- Explore Destinations -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_explore_destinations"
                android:textSize="@dimen/home_section_title_text_size"
                android:textStyle="bold"
                android:textColor="#1E3A5F"
                android:layout_marginStart="@dimen/home_section_title_margin_start"
                android:layout_marginTop="@dimen/home_explore_title_margin_top" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_RV_explore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_explore_list_margin_top"
                tools:listitem="@layout/item_explore_destination" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
